--- a/Listen_And_Read/PetsMe/Views/Base.lproj/Main.storyboard
+++ b/Listen_And_Read/PetsMe/Views/Base.lproj/Main.storyboard
@@ -93,136 +93,6 @@
             </objects>
             <point key="canvasLocation" x="641" y="1777"/>
         </scene>
-        <!--Hello There-->
-        <scene sceneID="qWw-rL-Cim">
-            <objects>
-                <collectionViewController id="ejd-Ki-TqE" customClass="HomeCollectionVC" customModule="PetsMe" customModuleProvider="target" sceneMemberID="viewController">
-                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="iJ4-fa-l36">
-                        <rect key="frame" x="0.0" y="0.0" width="1024" height="1366"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="0.96862745289999996" green="0.96470588450000005" blue="0.95686274770000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="yoD-2t-BON">
-                            <size key="itemSize" width="128" height="128"/>
-                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                            <inset key="sectionInset" minX="4" minY="80" maxX="4" maxY="22"/>
-                        </collectionViewFlowLayout>
-                        <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="show_detail" id="IT6-ST-Wb5">
-                                <rect key="frame" x="4" y="80" width="128" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="CXj-3i-RoT">
-                                    <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </collectionViewCellContentView>
-                            </collectionViewCell>
-                        </cells>
-                        <connections>
-                            <outlet property="dataSource" destination="ejd-Ki-TqE" id="OKq-tv-rnp"/>
-                            <outlet property="delegate" destination="ejd-Ki-TqE" id="9xA-15-hK5"/>
-                        </connections>
-                    </collectionView>
-                    <navigationItem key="navigationItem" title="Hello There" id="QiW-DE-KA0"/>
-                </collectionViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="tbU-0k-dmv" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-2088" y="3196"/>
-        </scene>
-        <!--EnglishVC-->
-        <scene sceneID="ZmH-ug-fde">
-            <objects>
-                <viewController id="PUN-kF-HoT" customClass="EnglishVC" customModule="PetsMe" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="vLO-qu-2DF">
-                        <rect key="frame" x="0.0" y="0.0" width="1024" height="1366"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="Dqt-zb-pzZ"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="tAZ-0e-j4V"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Fa9-cp-LO8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-1346" y="3194"/>
-        </scene>
-        <!--Sign Up View Controller-->
-        <scene sceneID="bva-r1-q25">
-            <objects>
-                <viewController storyboardIdentifier="SignUpViewController" id="BLf-5E-1C5" customClass="SignUpViewController" customModule="PetsMe" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="D0U-f3-5cn">
-                        <rect key="frame" x="0.0" y="0.0" width="1024" height="1366"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="6zy-Iw-Rgo">
-                                <rect key="frame" x="40" y="60" width="944" height="320.5"/>
-                                <subviews>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="First Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="U6V-md-842">
-                                        <rect key="frame" x="0.0" y="0.0" width="944" height="40"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
-                                    </textField>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="LastName" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XJ6-md-0uO">
-                                        <rect key="frame" x="0.0" y="60" width="944" height="40"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
-                                    </textField>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DyP-lA-uFS">
-                                        <rect key="frame" x="0.0" y="120" width="944" height="40"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
-                                    </textField>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zGX-dw-DFo">
-                                        <rect key="frame" x="0.0" y="180" width="944" height="40"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
-                                    </textField>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ARJ-h4-xPC">
-                                        <rect key="frame" x="0.0" y="240" width="944" height="40"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="40" id="dNe-C2-THx"/>
-                                        </constraints>
-                                        <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain" title="SignUp"/>
-                                        <connections>
-                                            <action selector="signUpTapped:" destination="BLf-5E-1C5" eventType="touchUpInside" id="wk2-fS-mpH"/>
-                                        </connections>
-                                    </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Erorr" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Oqz-Ys-XYS">
-                                        <rect key="frame" x="0.0" y="300" width="944" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <color key="textColor" systemColor="systemRedColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                                <constraints>
-                                    <constraint firstItem="DyP-lA-uFS" firstAttribute="height" secondItem="U6V-md-842" secondAttribute="height" id="Btd-2f-cZN"/>
-                                    <constraint firstItem="XJ6-md-0uO" firstAttribute="height" secondItem="U6V-md-842" secondAttribute="height" id="MWo-1T-O3m"/>
-                                    <constraint firstItem="zGX-dw-DFo" firstAttribute="height" secondItem="U6V-md-842" secondAttribute="height" id="hTx-pa-fLI"/>
-                                    <constraint firstItem="ARJ-h4-xPC" firstAttribute="height" secondItem="U6V-md-842" secondAttribute="height" id="zfu-fa-RVh"/>
-                                </constraints>
-                            </stackView>
-                        </subviews>
-                        <viewLayoutGuide key="safeArea" id="kpJ-Ig-HDQ"/>
-                        <color key="backgroundColor" red="0.96862745289999996" green="0.96470588450000005" blue="0.95686274770000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                        <constraints>
-                            <constraint firstItem="6zy-Iw-Rgo" firstAttribute="top" secondItem="kpJ-Ig-HDQ" secondAttribute="top" constant="40" id="ZCa-Sd-0Kx"/>
-                            <constraint firstItem="6zy-Iw-Rgo" firstAttribute="leading" secondItem="kpJ-Ig-HDQ" secondAttribute="leading" constant="40" id="aAB-PI-fTK"/>
-                            <constraint firstItem="kpJ-Ig-HDQ" firstAttribute="trailing" secondItem="6zy-Iw-Rgo" secondAttribute="trailing" constant="40" id="kWK-li-4Mz"/>
-                        </constraints>
-                    </view>
-                    <navigationItem key="navigationItem" id="Hw6-Q8-G7y"/>
-                    <connections>
-                        <outlet property="emailTextField" destination="DyP-lA-uFS" id="VHc-dB-frs"/>
-                        <outlet property="errorLabel" destination="Oqz-Ys-XYS" id="Ola-Tu-eLB"/>
-                        <outlet property="firstNameTextField" destination="U6V-md-842" id="pHC-JC-0PI"/>
-                        <outlet property="lastNameTextField" destination="XJ6-md-0uO" id="0fT-pw-ebg"/>
-                        <outlet property="passwordTextField" destination="zGX-dw-DFo" id="Niw-yY-Xur"/>
-                        <outlet property="signUpButton" destination="ARJ-h4-xPC" id="gHm-e6-PiM"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Kzf-bk-lCf" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="640" y="3196"/>
-        </scene>
         <!--Log In View Controller-->
         <scene sceneID="J6c-0t-Buo">
             <objects>
@@ -286,7 +156,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lo2-94-brT" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="642" y="3939"/>
+            <point key="canvasLocation" x="864" y="185"/>
         </scene>
         <!--Splash Class-->
         <scene sceneID="lYa-Xq-wbb">
@@ -602,7 +472,7 @@
         <!--SignUp-->
         <scene sceneID="hFX-cf-a7m">
             <objects>
-                <viewController storyboardIdentifier="Register" title="SignUp" id="Eew-am-112" userLabel="SignUp" customClass="Register" customModule="PetsMe" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Register" title="SignUp" id="Eew-am-112" userLabel="SignUp" customClass="SignUpViewController" customModule="PetsMe" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="yzW-5H-9c0" userLabel="Root_View">
                         <rect key="frame" x="0.0" y="0.0" width="1024" height="1366"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -1014,7 +884,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Bv3-vK-WeL" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="435" y="185"/>
+            <point key="canvasLocation" x="114" y="185"/>
         </scene>
         <!--Home-->
         <scene sceneID="Eku-9G-iCs">
@@ -1174,7 +1044,6 @@
                                                                 <size key="customSize" width="250" height="250"/>
                                                                 <connections>
                                                                     <outlet property="bookByCategory_View" destination="R7P-SB-1Gv" id="5yg-dk-Ogb"/>
-                                                                    <segue destination="Eaf-YP-kpA" kind="show" identifier="show" id="DDZ-ck-ddj"/>
                                                                 </connections>
                                                             </collectionViewCell>
                                                         </cells>
@@ -1231,27 +1100,39 @@
         <!--Books List Table View Controller-->
         <scene sceneID="7xg-ZO-9os">
             <objects>
-                <tableViewController id="Eaf-YP-kpA" customClass="BooksListTableViewController" customModule="PetsMe" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="0gV-vA-OUq">
+                <tableViewController storyboardIdentifier="BooksListTableViewController" id="Eaf-YP-kpA" customClass="BooksListTableViewController" customModule="PetsMe" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="none" rowHeight="230" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" id="0gV-vA-OUq">
                         <rect key="frame" x="0.0" y="0.0" width="1024" height="1366"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" systemColor="tintColor"/>
+                        <color key="sectionIndexBackgroundColor" red="0.92549026010000002" green="0.47450977560000002" blue="0.39215683940000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <searchBar key="tableHeaderView" contentMode="redraw" searchBarStyle="minimal" id="URP-kB-NgF">
+                            <rect key="frame" x="0.0" y="0.0" width="1024" height="44"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <color key="backgroundColor" red="0.96862745289999996" green="0.96470588450000005" blue="0.95686274770000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                            <textInputTraits key="textInputTraits"/>
+                        </searchBar>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="bO4-m7-GK0">
-                                <rect key="frame" x="0.0" y="44.5" width="1024" height="51.5"/>
+                                <rect key="frame" x="0.0" y="93.5" width="1024" height="230"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="bO4-m7-GK0" id="I1h-Om-Kxd">
-                                    <rect key="frame" x="0.0" y="0.0" width="1024" height="51.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="1024" height="230"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
+                                <color key="backgroundColor" systemColor="systemRedColor"/>
                             </tableViewCell>
                         </prototypes>
+                        <sections/>
                         <connections>
                             <outlet property="dataSource" destination="Eaf-YP-kpA" id="fKa-YV-3Zk"/>
                             <outlet property="delegate" destination="Eaf-YP-kpA" id="Nyy-mQ-uJF"/>
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" id="Jk3-ai-Ikn"/>
+                    <connections>
+                        <outlet property="searchBar" destination="URP-kB-NgF" id="lL2-Cu-0yh"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AGC-cf-0i0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
