--- a/Listen_And_Read/PetsMe/Views/BookListCell.xib
+++ b/Listen_And_Read/PetsMe/Views/BookListCell.xib
@@ -9,94 +9,96 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="BookListCell" rowHeight="167" id="KGk-i7-Jjw" customClass="BookListCell" customModule="PetsMe" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="446" height="166"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="BookListCell" rowHeight="230" id="KGk-i7-Jjw" customClass="BookListCell" customModule="PetsMe" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="571" height="222"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="446" height="166"/>
+                <rect key="frame" x="0.0" y="0.0" width="571" height="222"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Alice’s Adventures in Wonderland" translatesAutoresizingMaskIntoConstraints="NO" id="zAa-Ce-em2">
-                        <rect key="frame" x="8" y="8" width="150" height="150"/>
+                        <rect key="frame" x="8" y="7.5" width="150" height="207"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="150" id="0iH-eF-Dfj"/>
-                            <constraint firstAttribute="height" constant="150" id="OfK-Qi-9rG"/>
                         </constraints>
                     </imageView>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="8YN-nF-iE8">
-                        <rect key="frame" x="166" y="8" width="272" height="150"/>
+                        <rect key="frame" x="166" y="7.5" width="397" height="207"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lAQ-Q2-qxG">
-                                <rect key="frame" x="0.0" y="0.0" width="272" height="47.5"/>
+                                <rect key="frame" x="0.0" y="0.0" width="397" height="66.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gk8-62-NlD" userLabel="Title:">
-                                        <rect key="frame" x="0.0" y="0.0" width="50" height="47.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="60" height="66.5"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="50" id="a0c-LC-Pi4"/>
+                                            <constraint firstAttribute="width" constant="60" id="a0c-LC-Pi4"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bah-OY-h3v" userLabel="Title_Label">
-                                        <rect key="frame" x="50" y="0.0" width="222" height="47.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bah-OY-h3v" userLabel="Title_Label">
+                                        <rect key="frame" x="60" y="0.0" width="337" height="66.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Imr-3S-O62">
-                                <rect key="frame" x="0.0" y="51.5" width="272" height="47"/>
+                                <rect key="frame" x="0.0" y="70.5" width="397" height="66"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Author:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GBE-cj-kai">
-                                        <rect key="frame" x="0.0" y="0.0" width="60" height="47"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="90" height="66"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="60" id="mdq-mP-eaq"/>
+                                            <constraint firstAttribute="width" constant="90" id="mdq-mP-eaq"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="Author" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zl4-FH-KMj" userLabel="Author_Label">
-                                        <rect key="frame" x="60" y="0.0" width="212" height="47"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="Author" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zl4-FH-KMj" userLabel="Author_Label">
+                                        <rect key="frame" x="90" y="0.0" width="307" height="66"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Db6-Nk-7vU">
-                                <rect key="frame" x="0.0" y="102.5" width="272" height="47.5"/>
+                                <rect key="frame" x="0.0" y="140.5" width="397" height="66.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Genre:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CCn-Uw-7GN" userLabel="Genre">
-                                        <rect key="frame" x="0.0" y="0.0" width="60" height="47.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="90" height="66.5"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="60" id="HKc-tz-s82"/>
+                                            <constraint firstAttribute="width" constant="90" id="HKc-tz-s82"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="Genre" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JB7-hx-tHq" userLabel="Genre_Label">
-                                        <rect key="frame" x="60" y="0.0" width="212" height="47.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="Genre" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JB7-hx-tHq" userLabel="Genre_Label">
+                                        <rect key="frame" x="90" y="0.0" width="307" height="66.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                             </stackView>
                         </subviews>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="207" id="1Ot-hW-gQZ"/>
+                        </constraints>
                     </stackView>
                 </subviews>
+                <color key="backgroundColor" red="0.96862745289999996" green="0.96470588450000005" blue="0.95686274770000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="8YN-nF-iE8" secondAttribute="trailing" constant="8" id="1fa-BN-5bZ"/>
-                    <constraint firstAttribute="bottom" secondItem="zAa-Ce-em2" secondAttribute="bottom" constant="8" id="5tF-u6-hIx"/>
-                    <constraint firstAttribute="bottom" secondItem="8YN-nF-iE8" secondAttribute="bottom" constant="8" id="aKo-28-DZp"/>
+                    <constraint firstItem="8YN-nF-iE8" firstAttribute="top" secondItem="zAa-Ce-em2" secondAttribute="top" id="4BQ-BJ-yrx"/>
                     <constraint firstItem="zAa-Ce-em2" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="f5a-IS-kCd"/>
-                    <constraint firstItem="zAa-Ce-em2" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="hZb-J6-wjx"/>
                     <constraint firstItem="8YN-nF-iE8" firstAttribute="leading" secondItem="zAa-Ce-em2" secondAttribute="trailing" constant="8" id="j64-Yw-KvW"/>
-                    <constraint firstItem="8YN-nF-iE8" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="nWb-6n-iYx"/>
+                    <constraint firstItem="8YN-nF-iE8" firstAttribute="bottom" secondItem="zAa-Ce-em2" secondAttribute="bottom" id="kB4-2V-iM8"/>
+                    <constraint firstItem="zAa-Ce-em2" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="s8R-8J-ijL"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -106,7 +108,7 @@
                 <outlet property="bookGenreLabel" destination="JB7-hx-tHq" id="iZu-b9-qHl"/>
                 <outlet property="bookTitleLabel" destination="bah-OY-h3v" id="hPm-aJ-jaW"/>
             </connections>
-            <point key="canvasLocation" x="178.2608695652174" y="132.58928571428572"/>
+            <point key="canvasLocation" x="173.18840579710147" y="115.17857142857142"/>
         </tableViewCell>
     </objects>
     <resources>
