--- a/Listen_And_Read/PetsMe/Views/BookListCell.xib
+++ b/Listen_And_Read/PetsMe/Views/BookListCell.xib
@@ -21,6 +21,9 @@
                         <constraints>
                             <constraint firstAttribute="width" constant="150" id="0iH-eF-Dfj"/>
                         </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="string" keyPath="layer.cornerRadius" value="15"/>
+                        </userDefinedRuntimeAttributes>
                     </imageView>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="8YN-nF-iE8">
                         <rect key="frame" x="166" y="7.5" width="397" height="207"/>
